# tesla-streamer

./: .gitignore  LICENSE  README.md  build.sh  go.mod  go.sum  io.github.jreznik.TeslaStreamer.yaml  main.go  package-lock.json
decky-plugin/: main.py  package.json  plugin.json
decky-plugin/src/: index.tsx
gui/: CMakeLists.txt  io.github.jreznik.TeslaStreamer.desktop  io.github.jreznik.TeslaStreamer.metainfo.xml  resources.qrc
gui/src/: FirewallManagerLinux.cpp  FirewallManagerLinux.h  IFirewallManager.cpp  IFirewallManager.h  INetworkManager.cpp  INetworkManager.h  MainWindow.cpp  MainWindow.h  NetworkManagerLinux.cpp  NetworkManagerLinux.h  main.cpp
internal/capture/: capture.go  gstreamer.go  manager.go  wayland.go
internal/config/: config.go
internal/server/: dns.go  server.go
internal/webrtc/: webrtc.go
static/: index.html
